[gd_scene load_steps=22 format=3 uid="uid://pci8y50bj2mv"]

[ext_resource type="Script" uid="uid://clv6yr87povhf" path="res://Scenes/Level2/level_2.gd" id="1_hp1rf"]
[ext_resource type="PackedScene" uid="uid://bkiom600l0aa6" path="res://Scenes/Player/player.tscn" id="2_dbdtm"]
[ext_resource type="AudioStream" uid="uid://dijar5kqsckgs" path="res://Sound/FACTORY AMBIENCE.wav" id="3_0u6qp"]
[ext_resource type="PackedScene" uid="uid://xcbhh04btsa7" path="res://Scenes/GameInterface/game_interface.tscn" id="3_gted6"]
[ext_resource type="AudioStream" uid="uid://cpvku5gr8epal" path="res://Sound/Voicelines/GO STRAIGHT.wav" id="3_w8jtt"]
[ext_resource type="PackedScene" uid="uid://cu4nq7khuo13p" path="res://Scenes/PauseMenu/pause_menu.tscn" id="4_0u6qp"]
[ext_resource type="AudioStream" uid="uid://coasc1iqmoaff" path="res://Sound/Voicelines/STOPPPPP.wav" id="4_3tktx"]
[ext_resource type="AudioStream" uid="uid://basg01v3ete4y" path="res://Sound/CAMERA BEEP.mp3" id="4_50k73"]
[ext_resource type="AudioStream" uid="uid://b0nc6top31gvj" path="res://Sound/CONCRETE FOOTSTEPS.mp3" id="4_mt6hc"]
[ext_resource type="PackedScene" uid="uid://ds1etbutpbpeb" path="res://Scenes/wall.tscn" id="4_od0tw"]
[ext_resource type="AudioStream" uid="uid://dvthoh2n5twn1" path="res://Sound/Voicelines/TURN LEFT.wav" id="5_ilqku"]
[ext_resource type="AudioStream" uid="uid://cdpk8vwg6t8me" path="res://Sound/Voicelines/TURN RIGHT.wav" id="6_pl4dg"]
[ext_resource type="PackedScene" uid="uid://c143oxi3rakq1" path="res://Scenes/crate_large.tscn" id="7_3yc6a"]
[ext_resource type="PackedScene" uid="uid://cxc4xnt4ygwdb" path="res://Scenes/crate_medium.tscn" id="8_wo0g0"]
[ext_resource type="PackedScene" uid="uid://dcbrm1u85lrkq" path="res://Scenes/office_chair.tscn" id="9_wo0g0"]
[ext_resource type="PackedScene" uid="uid://bo8uw4okbm14n" path="res://Scenes/guard.tscn" id="10_ki0lg"]
[ext_resource type="PackedScene" uid="uid://dhqgwfunu3r6r" path="res://Scenes/crate_small.tscn" id="11_7jvws"]
[ext_resource type="Texture2D" uid="uid://d3p01i31nqx7o" path="res://Sprites/Tile.png" id="12_v37vd"]
[ext_resource type="Texture2D" uid="uid://bw633u2lls3j4" path="res://Sprites/tape.png" id="13_ymj0i"]
[ext_resource type="PackedScene" uid="uid://b41p4j5kt61jr" path="res://Scenes/NoticeScreen2/notice_screen2.tscn" id="14_r24tj"]
[ext_resource type="PackedScene" uid="uid://d72tpjlsm3m" path="res://Scenes/level_complete_trigger.tscn" id="17_bea4e"]

[node name="Level2" type="Node2D"]
script = ExtResource("1_hp1rf")

[node name="Player" parent="." instance=ExtResource("2_dbdtm")]
process_mode = 1
position = Vector2(399.00003, 936)
rotation = 1.5707964
motion_mode = 0
walking_speed = 300.0

[node name="Audio" type="Node2D" parent="Player"]
scale = Vector2(9.999995, 9.999995)

[node name="CameraBeep" type="AudioStreamPlayer2D" parent="Player/Audio"]
position = Vector2(-635.0003, -734.00037)
scale = Vector2(1.0000005, 1.0000005)
stream = ExtResource("4_50k73")

[node name="Footsteps" type="AudioStreamPlayer2D" parent="Player/Audio"]
position = Vector2(-624.0003, -738.00037)
scale = Vector2(1.0000005, 1.0000005)
stream = ExtResource("4_mt6hc")

[node name="CameraBeep2" type="AudioStreamPlayer2D" parent="Player/Audio"]
position = Vector2(-635.0008, -11738.006)
scale = Vector2(1.0000005, 1.0000005)
stream = ExtResource("4_50k73")

[node name="Footsteps2" type="AudioStreamPlayer2D" parent="Player/Audio"]
position = Vector2(-624.0008, -11742.006)
scale = Vector2(1.0000005, 1.0000005)
stream = ExtResource("4_mt6hc")

[node name="CameraBeep3" type="AudioStreamPlayer2D" parent="Player/Audio"]
position = Vector2(985.99994, -11738.006)
scale = Vector2(1.0000005, 1.0000005)
stream = ExtResource("4_50k73")

[node name="Footsteps3" type="AudioStreamPlayer2D" parent="Player/Audio"]
position = Vector2(996.99994, -11742.006)
scale = Vector2(1.0000005, 1.0000005)
stream = ExtResource("4_mt6hc")

[node name="FactoryAmbiance" type="AudioStreamPlayer2D" parent="Player/Audio"]
scale = Vector2(1.0000002, 1.0000002)
stream = ExtResource("3_0u6qp")
volume_db = -5.56
max_distance = 2807.0
attenuation = 1.4142189

[node name="TURNLEFT_Voiceline" type="AudioStreamPlayer2D" parent="Player/Audio"]
scale = Vector2(0.9999999, 0.9999999)
stream = ExtResource("5_ilqku")

[node name="TURNRIGHT_Voiceline" type="AudioStreamPlayer2D" parent="Player/Audio"]
scale = Vector2(0.9999999, 0.9999999)
stream = ExtResource("6_pl4dg")

[node name="GOSTRAIGHT_Voiceline" type="AudioStreamPlayer2D" parent="Player/Audio"]
scale = Vector2(0.9999999, 0.9999999)
stream = ExtResource("3_w8jtt")

[node name="STOP_Voiceline" type="AudioStreamPlayer2D" parent="Player/Audio"]
scale = Vector2(0.9999999, 0.9999999)
stream = ExtResource("4_3tktx")

[node name="GameObjects" type="Node2D" parent="."]
process_mode = 1
position = Vector2(635, 734)
scale = Vector2(0.1, 0.1)

[node name="Walls" type="Node2D" parent="GameObjects"]

[node name="Wall" parent="GameObjects/Walls" instance=ExtResource("4_od0tw")]
position = Vector2(-6119.999, -6879.999)
scale = Vector2(400, 10)

[node name="Wall5" parent="GameObjects/Walls" instance=ExtResource("4_od0tw")]
position = Vector2(-7810.0005, 10359.999)
rotation = -1.5707964
scale = Vector2(100, 7.655)

[node name="Wall10" parent="GameObjects/Walls" instance=ExtResource("4_od0tw")]
position = Vector2(360649.97, 11530)
rotation = 3.1415927
scale = Vector2(400, 10)

[node name="Level1" type="Node2D" parent="GameObjects"]

[node name="crate_large" parent="GameObjects/Level1" instance=ExtResource("7_3yc6a")]
position = Vector2(-2270, -2289.9998)
rotation = 0.012538005
scale = Vector2(181.39, 181.39)

[node name="crate_large2" parent="GameObjects/Level1" instance=ExtResource("7_3yc6a")]
position = Vector2(-2179.9998, 6859.9995)
rotation = 0.052359883
scale = Vector2(181.39, 181.39)

[node name="crate_large5" parent="GameObjects/Level1" instance=ExtResource("7_3yc6a")]
position = Vector2(33890, 6730)
rotation = -0.08726646
scale = Vector2(181.39, 181.39)

[node name="crate_large8" parent="GameObjects/Level1" instance=ExtResource("7_3yc6a")]
position = Vector2(42770, 839.9998)
rotation = -1.6842427
scale = Vector2(181.39, 181.39)

[node name="crate_large9" parent="GameObjects/Level1" instance=ExtResource("7_3yc6a")]
position = Vector2(55960, -540)
rotation = -1.4748032
scale = Vector2(181.39, 181.39)

[node name="crate_large6" parent="GameObjects/Level1" instance=ExtResource("7_3yc6a")]
position = Vector2(29170.002, -770)
rotation = 1.5882496
scale = Vector2(181.39, 181.39)

[node name="crate_large3" parent="GameObjects/Level1" instance=ExtResource("7_3yc6a")]
position = Vector2(11599.999, 5510)
rotation = 1.5969763
scale = Vector2(181.39, 181.39)

[node name="crate_medium" parent="GameObjects/Level1" instance=ExtResource("8_wo0g0")]
position = Vector2(5140, 4919.9995)
rotation = -1.5402701
scale = Vector2(141.965, 141.965)

[node name="crate_medium5" parent="GameObjects/Level1" instance=ExtResource("8_wo0g0")]
position = Vector2(33750, -3000)
rotation = -3.1904619
scale = Vector2(141.965, 141.965)

[node name="crate_medium10" parent="GameObjects/Level1" instance=ExtResource("8_wo0g0")]
position = Vector2(41590.004, 7030)
rotation = -3.1154127
scale = Vector2(245, 245)

[node name="crate_medium7" parent="GameObjects/Level1" instance=ExtResource("8_wo0g0")]
position = Vector2(55460.004, 7759.999)
rotation = -3.1904619
scale = Vector2(141.965, 141.965)

[node name="crate_medium6" parent="GameObjects/Level1" instance=ExtResource("8_wo0g0")]
position = Vector2(25090.002, 5450)
rotation = -1.5402701
scale = Vector2(141.965, 141.965)

[node name="crate_medium9" parent="GameObjects/Level1" instance=ExtResource("8_wo0g0")]
position = Vector2(24020, -669.99976)
rotation = -1.7366027
scale = Vector2(245, 245)

[node name="crate_medium8" parent="GameObjects/Level1" instance=ExtResource("8_wo0g0")]
position = Vector2(15380, 6820)
rotation = -1.6458455
scale = Vector2(141.965, 141.965)

[node name="crate_medium3" parent="GameObjects/Level1" instance=ExtResource("8_wo0g0")]
position = Vector2(8700.001, -1629.9999)
rotation = 0.04170525
scale = Vector2(141.965, 141.965)

[node name="crate_medium4" parent="GameObjects/Level1" instance=ExtResource("8_wo0g0")]
position = Vector2(13370.001, -1649.9999)
rotation = -0.10471976
scale = Vector2(141.965, 141.965)

[node name="crate_medium2" parent="GameObjects/Level1" instance=ExtResource("8_wo0g0")]
position = Vector2(5010, 19.999842)
rotation = -1.6469852
scale = Vector2(141.965, 141.965)

[node name="Level2" type="Node2D" parent="GameObjects"]

[node name="office_chair" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(68340, -2090.0012)
rotation = -0.32463124
scale = Vector2(95, 95)

[node name="office_chair2" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(72569.99, 630.0011)
rotation = 0.19373155
scale = Vector2(95, 95)

[node name="office_chair3" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(70370, 3970.0005)
rotation = -0.064577185
scale = Vector2(95, 95)

[node name="office_chair4" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(75330, 6560.001)
rotation = 0.19373155
scale = Vector2(95, 95)

[node name="office_chair5" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(77880.01, -1700.001)
rotation = 0.064577185
scale = Vector2(95, 95)

[node name="office_chair6" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(83299.99, 3070.0005)
rotation = 0.064577185
scale = Vector2(95, 95)

[node name="office_chair7" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(87060, -2530.0002)
rotation = -0.38920844
scale = Vector2(95, 95)

[node name="office_chair8" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(94770, 579.99976)
scale = Vector2(95, 95)

[node name="office_chair9" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(91460, 4580)
rotation = 0.25830874
scale = Vector2(95, 95)

[node name="office_chair10" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(96080, 7810)
scale = Vector2(95, 95)

[node name="office_chair12" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(91510, -2120.0022)
rotation = -0.51836276
scale = Vector2(95, 95)

[node name="office_chair13" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(101790.01, 1010.00024)
rotation = -0.26005405
scale = Vector2(95, 95)

[node name="office_chair16" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(104950, -2620.0002)
rotation = 0.064577185
scale = Vector2(95, 95)

[node name="office_chair17" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(107699.99, 2989.997)
rotation = 0.3228859
scale = Vector2(95, 95)

[node name="office_chair14" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(97599.99, 3690)
rotation = 0.064577185
scale = Vector2(95, 95)

[node name="office_chair15" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(103300, 6029.9985)
rotation = -0.4537856
scale = Vector2(95, 95)

[node name="office_chair11" parent="GameObjects/Level2" instance=ExtResource("9_wo0g0")]
position = Vector2(97900, -2420)
scale = Vector2(95, 95)

[node name="guard_moving" parent="GameObjects/Level2" instance=ExtResource("10_ki0lg")]
position = Vector2(80320, 90.00195)
scale = Vector2(28, 28)

[node name="guard_moving2" parent="GameObjects/Level2" instance=ExtResource("10_ki0lg")]
position = Vector2(87630, 7830.001)
scale = Vector2(28, 28)

[node name="Level3" type="Node2D" parent="GameObjects"]

[node name="crate_large2" parent="GameObjects/Level3" instance=ExtResource("7_3yc6a")]
position = Vector2(132460, -550.00024)
rotation = 1.5707964
scale = Vector2(210, 210)

[node name="crate_large4" parent="GameObjects/Level3" instance=ExtResource("7_3yc6a")]
position = Vector2(132430, -450.00024)
rotation = 1.5707964
scale = Vector2(210, 210)

[node name="crate_large3" parent="GameObjects/Level3" instance=ExtResource("7_3yc6a")]
position = Vector2(143529.98, 4699.991)
rotation = -1.0698868
scale = Vector2(190, 190)

[node name="office_chair" parent="GameObjects/Level3" instance=ExtResource("9_wo0g0")]
position = Vector2(140739.98, -1570)
scale = Vector2(60, 60)

[node name="guard_moving" parent="GameObjects/Level3" instance=ExtResource("10_ki0lg")]
position = Vector2(137180, 370)
scale = Vector2(28, 28)

[node name="guard_moving2" parent="GameObjects/Level3" instance=ExtResource("10_ki0lg")]
position = Vector2(127779.99, 8279.999)
scale = Vector2(28, 28)

[node name="guard_360" parent="GameObjects/Level3" instance=ExtResource("10_ki0lg")]
position = Vector2(135940, 7539.9995)
scale = Vector2(28, 28)

[node name="crate_medium" parent="GameObjects/Level3" instance=ExtResource("8_wo0g0")]
position = Vector2(121299.984, -1870)
scale = Vector2(270, 270)

[node name="crate_small" parent="GameObjects/Level3" instance=ExtResource("11_7jvws")]
position = Vector2(119700, 6240.0005)
scale = Vector2(400, 400)

[node name="Background" type="Node2D" parent="GameObjects"]
position = Vector2(-72489.99, -24759.998)
scale = Vector2(65.74283, 60.099422)
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="GameObjects/Background"]
offset_left = -5574.9043
offset_top = -3125.4875
offset_right = -5474.9043
offset_bottom = -3025.4875
scale = Vector2(65.74283, 60.09943)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="GameObjects/Background"]
offset_left = -1078.749
offset_top = -5705.879
offset_right = -978.749
offset_bottom = -5605.879
scale = Vector2(65.74283, 60.09943)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ColorRect3" type="ColorRect" parent="GameObjects/Background"]
offset_left = -863.3642
offset_top = 598.17535
offset_right = -763.3642
offset_bottom = 698.17535
scale = Vector2(65.74283, 60.09943)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ColorRect4" type="ColorRect" parent="GameObjects/Background"]
offset_left = 352.12952
offset_top = 573.3831
offset_right = 362.12952
offset_bottom = 583.3831
scale = Vector2(65.74283, 60.09943)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ColorRect5" type="ColorRect" parent="GameObjects/Background"]
offset_left = 352.5859
offset_top = -267.3903
offset_right = 362.5859
offset_bottom = -257.3903
scale = Vector2(65.74283, 60.09943)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Tile" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1069.1659, 380.70242)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile2" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1069.4701, 550.75397)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile3" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1220.6654, 380.36963)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile4" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1222.4906, 546.09503)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile5" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1366.6888, 360.73553)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile6" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1366.2325, 525.29614)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile7" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1490.3525, 384.8622)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile8" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1512.8644, 510.65375)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile9" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1512.8644, 510.65375)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile10" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1628.3143, 386.8589)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile11" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1661.1697, 547.9253)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile12" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1777.2279, 391.85065)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile13" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1802.63, 541.6025)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile14" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1919.905, 386.8589)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile15" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(1945.9155, 534.11487)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile16" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2033.6816, 392.51617)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile17" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2078.2493, 547.5925)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile18" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2174.838, 382.19998)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile19" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2226.2502, 533.2829)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile20" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2368.7754, 536.27795)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile22" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2441.483, 394.0137)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile23" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2513.43, 543.1)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile24" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2595.264, 404.66272)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile25" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2666.6025, 553.749)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile26" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2735.051, 394.6793)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile27" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2807.7585, 538.44104)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile28" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2886.094, 394.0137)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile29" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2960.9312, 543.1)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile30" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3034.247, 394.84564)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile31" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3107.563, 552.4179)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile32" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3224.9905, 394.18008)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile33" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3255.108, 548.5909)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile34" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3371.166, 400.33655)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile35" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3404.7817, 546.4278)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile36" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3513.843, 403.498)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile37" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3545.938, 547.25977)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile38" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3624.2734, 386.6925)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile39" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3684.3562, 541.26965)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile40" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3768.928, 382.19995)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile41" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3806.0422, 551.9187)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile42" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3806.0422, 551.9187)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile43" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3887.8762, 389.02197)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile44" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3952.8267, 541.1033)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tile21" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(2296.22, 381.86716)
scale = Vector2(0.15210783, 0.16639094)
texture = ExtResource("12_v37vd")
metadata/_edit_lock_ = true

[node name="Tape" type="Sprite2D" parent="GameObjects/Background"]
z_index = -100
position = Vector2(3484.1826, 449.8379)
scale = Vector2(0.110444024, 0.2510488)
texture = ExtResource("13_ymj0i")
metadata/_edit_lock_ = true

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="GameInterface" parent="UI" instance=ExtResource("3_gted6")]
visible = false

[node name="PauseMenu" parent="UI" instance=ExtResource("4_0u6qp")]
visible = false

[node name="NoticeScreen2" parent="UI" instance=ExtResource("14_r24tj")]
visible = false

[node name="LevelCompleteTrigger" parent="." instance=ExtResource("17_bea4e")]
position = Vector2(16343.001, 1056)
scale = Vector2(7.57, 7.57)

[connection signal="die" from="Player" to="." method="_on_player_die"]
[connection signal="escape" from="UI/GameInterface" to="." method="_on_game_interface_escape"]
[connection signal="rotate_left" from="UI/GameInterface" to="." method="_on_game_interface_rotate_left"]
[connection signal="rotate_right" from="UI/GameInterface" to="." method="_on_game_interface_rotate_right"]
[connection signal="stop" from="UI/GameInterface" to="." method="_on_game_interface_stop"]
[connection signal="walk_forward" from="UI/GameInterface" to="." method="_on_game_interface_walk_forward"]
[connection signal="continue_game" from="UI/PauseMenu" to="." method="_on_pause_menu_continue_game"]
[connection signal="return_to_menu" from="UI/PauseMenu" to="." method="_on_pause_menu_return_to_menu"]
[connection signal="body_entered" from="LevelCompleteTrigger" to="." method="_on_level_complete_trigger_body_entered"]
